--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build src/main.ts --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package"
+    "all": "yarn build && yarn format && yarn lint && yarn package"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
     "@types/node": "^16.10.5",
     "@types/semver": "^7.3.12",
     "@typescript-eslint/parser": "^5.8.1",
-    "@vercel/ncc": "^0.31.1",
+    "@vercel/ncc": "^0.34.0",
     "eslint": "^7.32.0",
     "eslint-plugin-github": "^4.3.2",
     "eslint-plugin-jest": "^25.3.2",
